Correcter gaps 2

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,13 +8,13 @@
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   font-size: 18px;
-  height: 293px;
+  height: 294px;
 }
 
 .header__links-list {
   display: flex;
   list-style: circle;
-  gap: 24px;
+  gap: 32px;
   flex-wrap: nowrap;
 }
 
@@ -24,6 +24,8 @@
 
 .header__link_active {
   text-decoration: underline;
+  text-underline-offset: 3px;
+  text-decoration-thickness: 1px;
 }
 
 .header__logo {
@@ -40,21 +42,27 @@
   display: flex;
   flex-direction: column;
   font-style: normal;
-  gap: 1px;
-  margin-top: 95px;
+  row-gap: 1px;
+  text-underline-offset: 4px;
 }
 
 .header__address {
   justify-self: end;
   margin-bottom: 100px;
+  margin-top: 97px;
+  margin-right: 36px;
+  line-height: 24px;
+  vertical-align: bottom;
 }
 
 .address_number {
   text-decoration: underline;
+  text-decoration-thickness: 1px;
 }
 
 .address_email {
   text-decoration: underline;
+  text-decoration-thickness: 1px;
 }
 
 /* Cover */
@@ -65,6 +73,7 @@
   justify-content: space-between;
   position: relative;
   background-image: url(/images/cover.jpg);
+  background-position: center;
   background-size: cover;
   z-index: 0;
   color: white;
@@ -137,12 +146,13 @@
 .lots__heading {
   margin-left: 40px;
   font-size: 40px;
+  margin-bottom: 27px;
 }
 
 .lots__card-list {
   display: flex;
   justify-content: space-between;
-  margin: 30px 0px;
+  margin-bottom: 30px;
 }
 
 .lots__card-list-item {
@@ -169,6 +179,8 @@
 .card__title {
   text-transform: uppercase;
   text-decoration: underline;
+  text-underline-offset: 3px;
+  text-decoration-thickness: 1px;
   font-size: 22px;
   font-style: bold;
 }
@@ -179,19 +191,27 @@
 
 .card_type_film {
   background-image: url(/images/card-lot-01.jpg);
+  background-size: cover;
+  background-position: center; 
 }
 
 .card_type_book {
   background-image: url(/images/card-lot-02.jpg);
+  background-size: cover;
+  background-position: center; 
 }
 
 .card_type_picture {
   background-image: url(/images/card-lot-03.jpg);
+  background-size: cover;
+  background-position: center; 
 }
 
 .lots__look-more-link {
   margin-left: 40px;
   text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 1px;
   font-size: 20px;
 }
 
